brat/test/golden/error/multilambda-id.brat
f(Bool) -> { Nat -> Nat }
f = { true => |
    | false => |
    }
