brat/test/golden/error/multilambda-id.brat.golden
Error in test/golden/error/multilambda-id.brat on line 2:
f = { true => |
              ^

  Elab error "Noun required at this position"

